// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compName !== AddressBook 1`] = `
<div
  className="new_contact_wrapper  "
>
  <div
    className="back_arrow"
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-left"
    />
     
    Back to Address Book
  </div>
  <div
    className="body"
  >
    <ShipmentContactForm
      contactType=""
      selectedContact={Object {}}
      setContact={null}
      showEdit={false}
      t={[Function]}
      theme={null}
    />
  </div>
</div>
`;

exports[`contactType === notifyee && compName === ShipmentContactForm 1`] = `
<div
  className="new_contact_wrapper new_contact_wrapper_thin "
>
  <div
    className="back_arrow"
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-left"
    />
     
    Back to Address Book
  </div>
  <div
    className="body"
  >
    <ShipmentContactForm
      contactType=""
      selectedContact={Object {}}
      setContact={null}
      showEdit={false}
      t={[Function]}
      theme={null}
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="new_contact_wrapper  "
>
  <div
    className="body"
  >
    <Connect(AddressBook)
      addContact={[Function]}
      t={[Function]}
    />
  </div>
</div>
`;
